# Aletheia

./: .gitignore  CHANGELOG.md  README.md  appInit.py  main.py  pyproject.toml
core/: aggregation_manager.py  code_exporter.py  data_handler.py  data_io_manager.py  data_mutator.py  diff_history.py  error_handler.py  help_manager.py  logger.py  markdown_parser.py  plot_config_manager.py  plot_engine.py  project_manager.py  regression_analyser.py  style_reloader.py  subset_manager.py
core/plot_strategies/: area_strategy.py  bar_strategy.py  box_strategy.py  count_strategy.py  density2d_strategy.py  eventplot_strategy.py  geospatial_strategy.py  gridded_strategies.py  heatmap_strategy.py  hexbin_strategy.py  histogram2d_strategy.py  histogram_strategy.py  kde_strategy.py  line_strategy.py  pie_strategy.py  scatter_strategy.py  shared_strategies.py  stackplot_strategy.py  stair_strategy.py  stem_strategy.py  strat_registry.py  three_d_strategies.py  trig_strategies.py  vector_strategies.py  violin_strategy.py
core/tempfilehandling/: cleanup_temp_files.py  create_temp_file.py
resources/: icon_data.json  statistics_style.css  stats_test_result_greeting.html  tutorial.db  version.py  whats_new.html
resources/help_animations/: data_normalization.py  iqr.py  (+7 more)
tests/: conftest.py  debug_autosave_indicator.py  debug_progress_dialog.py
ui/: DataPlotStudioApp.py  LandingPage.py  LineNumberArea.py  PythonHighlighter.py  data_tab.py  data_table_model.py  main_window.py  menu_bar.py  plot_tab.py  plot_tab_ui.py  status_bar.py  theme.py  workers.py
workspace/: .cursorrules
(+145 files in other folders)
