[project]
name = "Aletheia"
version = "0.2.0"
description = "Aletheia is a GUI implementation of the Matplotlib and pandas data analytics and plotting capabilities written using the PyQt6 GUI framework"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "contextily==1.7.0",
    "defusedxml>=0.7.1",
    "duckdb==1.1.3",
    "geopandas==1.1.2",
    "matplotlib==3.9.2",
    "numexpr>=2.10.1",
    "numpy==2.2.3",
    "pandas==2.2.3",
    "pyarrow>=14.0.1",
    "pyqt6==6.10.0",
    "pyqt6-qt6==6.10.1",
    "pyqt6-sip==13.10.2",
    "pyqt6-webengine==6.10.0",
    "pyqt6-webengine-qt6==6.10.1",
    "requests==2.32.3",
    "scikit-learn==1.6.1",
    "scipy==1.14.1",
    "seaborn==0.13.2",
    "sqlalchemy==2.0.36",
]
